Set up for tomorrow

--- a/home.html
+++ b/home.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Welcome to my home page!</h1>
+    I have few intrests and here are some of them:
   </body>
 </html>
