Basics of page done.

--- a/home.html
+++ b/home.html
@@ -7,7 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome to my home page!</h1>
-    I have few intrests and here are some of them:
+    <nav>
+      <ul>
+        <li><a class="active" href="home.html">Home</a></li>
+        <li><a href="games.html">Games</a></li>
+        <li><a href="music.html">Music</a></li>
+        <li><a href="#">"PlaceHolder"</a></li>
+      </ul>
+    </nav>
+    <div></div>
+    <p>Welcome to my home page! Here on my website you can get to know we better. From this page you can get to page about the games I play or music I listen to.</p>
   </body>
 </html>
